modules/sg/main.tf
# Création du security group
resource "aws_security_group" "matthieu-sg" {
  name        = "${var.tag}_sg_http_ssh2"
  description = "Security group for my EC2 instance"
  #Ouverture du port SSH en entrée
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #Ouverture du port HTTP en entrée
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #Ouverture du port HTTPS en entrée
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}


#resource "aws_network_interface_sg_attachment" "sg_attachment" {
#  security_group_id    = aws_security_group.matthieu-sg.id
#  network_interface_id = aws_instance.ec2.primary_network_interface_id
#}
